# goya-template

./: Cargo.toml  README.md  Taskfile.yml  cargo-generate.toml  test.sh
.github/workflows/: ci.yml
{{project-name}}/: Cargo.toml
{{project-name}}-ebpf/: Cargo.toml
{{project-name}}-go/: go.mod  go.sum  helper.go  logs.go  main.go
{{project-name}}-go/attach/: attach.go  resolve.go  spec.go
{{project-name}}-go/logs/: header.go  header_dump.go  header_parser.go  logs.go  payload_dump.go  payload_format.go  payload_parser.go  payload_reader.go  payload_token.go  payload_utils.go  print.go  reader.go
