[workspace]
resolver = "2"
members = [
    "{{project-name}}",
    "{{project-name}}-ebpf",
]
default-members = ["{{project-name}}"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
aya-build = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
libc = { version = "0.2.159", default-features = false }
log = { version = "0.4.22", default-features = false }
which = { version = "6.0.0", default-features = false }

[profile.release.package.{{project-name}}-ebpf]
debug = 2
codegen-units = 1
